<resources>
    <string name="app_name">Solid Planner</string>
    <string name="txtagg">Agregar Evento</string>
    <string name="btnopen">ABRIR CALENDARIO</string>
    <string name="txttitulo">Titulo del evento</string>
    <string name="txtdescripcion">Descripcion del evento</string>
    <string name="txtlocalization">Localizacion del evento</string>
    <string name="txtdatestart">Fecha Inicio</string>
    <string name="txtdateend">Fecha Fin</string>
    <string name="txthourstart">Hora Inicio</string>
    <string name="txthourend">Hora Fin</string>
    <string name="txtemail">Email del invitado</string>
    <string name="txtrecurrence">Recurrencia</string>
    <string name="rgday">Diaria</string>
    <string name="rgmonth">Mensual</string>
    <string name="rgyear">Anual</string>
    <string name="txtnumdays">Numero de dias</string>
    <string name="rgweek">Semanal</string>
    <string name="rgnever">Nunca</string>

    <string name="login">Iniciar Sesión</string>
    <string name="signin">Registrarse</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="password2">Confirmar Contraseña</string>
    <string name="message">Bienvenido a SolidPlanner</string>
    <string name="logout">Cerrar Sesión</string>
</resources>
