<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="1000dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtagg"
                android:layout_width="225dp"
                android:layout_height="50dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:inputType="textCapSentences"
                android:text="@string/txtagg"
                android:textSize="26sp"
                app:fontFamily="@font/days_one"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txttitle"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:ems="10"
                android:hint="@string/txttitulo"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtagg" />

            <EditText
                android:id="@+id/txtdescription"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:ems="10"
                android:hint="@string/txtdescripcion"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txttitle" />

            <EditText
                android:id="@+id/txtlocal"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:ems="10"
                android:hint="@string/txtlocalization"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdescription" />

            <EditText
                android:id="@+id/txtemail"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="75dp"
                android:layout_marginRight="75dp"
                android:ems="10"
                android:hint="@string/txtemail"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtlocal" />


            <TextView
                android:id="@+id/txtdates"
                android:layout_width="130dp"
                android:layout_height="55dp"
                android:layout_marginStart="38dp"
                android:layout_marginLeft="38dp"
                android:layout_marginTop="30dp"
                android:clickable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txtdatestart"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtemail" />

            <Button
                android:id="@+id/btndates"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="51dp"
                android:layout_marginLeft="51dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_button"
                android:text="@string/txtdatestart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdates" />

            <TextView
                android:id="@+id/txtdatee"
                android:layout_width="120dp"
                android:layout_height="55dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:clickable="false"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txtdateend"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtemail" />

            <Button
                android:id="@+id/btndatee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="54dp"
                android:layout_marginRight="54dp"
                android:background="@drawable/round_button"
                android:text="@string/txtdateend"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtdatee" />

            <TextView
                android:id="@+id/txtrecurrence"
                android:layout_width="95dp"
                android:layout_height="24dp"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp"
                android:text="@string/txtrecurrence"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnhour" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtrecurrence">

                <RadioButton
                    android:id="@+id/rgnever"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rgnever" />

                <RadioButton
                    android:id="@+id/rgday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rgday" />

                <RadioButton
                    android:id="@+id/rgweek"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rgweek" />

                <RadioButton
                    android:id="@+id/rgmonth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rgmonth" />

                <RadioButton
                    android:id="@+id/rgyear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rgyear" />

            </RadioGroup>

            <EditText
                android:id="@+id/txtnumdays"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:ems="10"
                android:hint="@string/txtnumdays"
                android:inputType="numberDecimal"
                android:digits="0123456789."
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnhoure" />

            <Button
                android:id="@+id/btnopen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="133dp"
                android:layout_marginLeft="133dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="133dp"
                android:layout_marginRight="133dp"
                android:background="@drawable/round_button"
                android:text="@string/btnopen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

            <Button
                android:id="@+id/btnhour"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_button"
                android:text="@string/txthourstart"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tthour" />

            <TextView
                android:id="@+id/tthour"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="43dp"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/txthourstart"
                android:inputType="textPersonName"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btndates" />

            <TextView
                android:id="@+id/txthoure"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="38dp"
                android:layout_marginRight="38dp"
                android:gravity="center"
                android:hint="@string/txthourend"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btndatee" />

            <Button
                android:id="@+id/btnhoure"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="47dp"
                android:layout_marginRight="47dp"
                android:text="@string/txthourend"
                android:background="@drawable/round_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txthoure" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>